# algorithms-data-structures

./: .gitignore  CMakeLists.txt  README.md
Leetcode problems/217. Contain Duplicate/: main.py
data-structures/1-Arrays/: main.cpp
data-structures/2-Stacks/: main.cpp
data-structures/3-Queues/: main.cpp
data-structures/4-Linked lists/singly_linked_lists/: main.cpp
data-structures/4-Priority_queues/: main.cpp
data-structures/5-Singly_linked_lists/: main.cpp
data-structures/linked lists/singly_linked_lists/: main.cpp
data-structures/stacks/: main.cpp
data_structures/arrays/vectors/: main.cpp
data_structures/sets/normal_sets/: main.cpp
data_structures/sets/unordered_sets/: main.cpp
leetcode_problems/217_contain_duplicate/: main.cpp  main.py
leetcode_problems/242_valid_anagram/: main.py
